--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "apollo-datasource": "^3.3.2",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "node-fetch": "^3.3.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
