feat: create files from deploy in docker

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-RDS_DATABASE=faculdade
-RDS_PORT=55000
-RDS_USERNAME=postgres
-RDS_PASSWORD=postgrespw
-RDS_HOST=localhost
+      RDS_HOST=
+      RDS_DATABASE=
+      RDS_PORT=
+      RDS_USERNAME=
+      RDS_PASSWORD=
