--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,9 @@ version: '3'
 
 services:
   app:
-    image: api-faculdade
+    image: fernandocker21/api-faculdade
     container_name: api-faculdade
-    restart: unless-stopped
+    restart: always
     environment:
       - RDS_HOST=db
       - RDS_DATABASE=faculdade
@@ -14,8 +14,6 @@ services:
     ports:
       - '3000:3000'
     command: ["sh","./start.sh"]
-    volumes:
-      - .:/home/node/app
     depends_on:
       - db
     networks:
@@ -24,6 +22,8 @@ services:
   db:
     image: postgres:alpine
     container_name: database-faculdade
+    environment:
+      - POSTGRES_PASSWORD=postgres
     restart: always
     tty: true
     ports:
@@ -32,20 +32,7 @@ services:
       - .docker/dbdata:/var/lib/postgresql/data
     networks:
       - app-network
-    
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin-faculdade
-    tty: true
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - '8000:80'
-    depends_on:
-      - db
-    networks:
-      - app-network
+
 
 networks:
   app-network:
