feat: insert service aws

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
-      RDS_HOST=
-      RDS_DATABASE=
-      RDS_PORT=
-      RDS_USERNAME=
-      RDS_PASSWORD=
+      RDS_HOST=localhost
+      RDS_DATABASE=faculdade
+      RDS_PORT=5432
+      RDS_USERNAME=postgres
+      RDS_PASSWORD=123
+
       REDIS_PASSWORD=
+      SECRET_TOKEN=akjhdasd73bakjsdd3bakjshdkash
+
+      AWS_REGION=
+      AWS_ACESS_KEY_ID=
+      AWS_SECRET_ACESS_KEY=
+      AWS_BUCKET_NAME=
