--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
       "@nestjs/passport": "^9.0.3",
       "@nestjs/platform-express": "^9.0.0",
       "@nestjs/typeorm": "^9.0.1",
+      "@types/multer": "^1.4.7",
       "apollo-datasource": "^3.3.2",
+      "aws-sdk": "^2.1370.0",
       "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
       "jsonwebtoken": "^9.0.0",
