--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     command: ["sh","./start.sh"]
     depends_on:
       - db
+      - redis
     networks:
       - app-network
   
@@ -32,7 +33,14 @@ services:
       - .docker/dbdata:/var/lib/postgresql/data
     networks:
       - app-network
-
+  redis:
+    image: redis
+    container_name: redis-faculdade
+    restart: always
+    ports:
+      - '6379:6379'
+    networks:
+      - app-network
 
 networks:
   app-network:
