--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "aws-sdk": "^2.1370.0",
       "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
+      "ioredis": "^5.3.2",
       "jsonwebtoken": "^9.0.0",
       "node-fetch": "^3.3.1",
       "passport": "^0.6.0",
