--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "migration:revert": "npm run typeorm -- migration:revert"
    },
    "dependencies": {
+      "@nestjs-modules/ioredis": "^1.0.1",
       "@nestjs/common": "^9.0.0",
       "@nestjs/config": "^2.3.1",
       "@nestjs/core": "^9.0.0",
@@ -41,6 +42,7 @@
       "dotenv": "^16.0.3",
       "ioredis": "^5.3.2",
       "jsonwebtoken": "^9.0.0",
+      "nestjs-rate-limiter": "^3.1.0",
       "node-fetch": "^3.3.1",
       "passport": "^0.6.0",
       "passport-jwt": "^4.0.1",
