--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
       "@nestjs/config": "^2.3.1",
       "@nestjs/core": "^9.0.0",
       "@nestjs/jwt": "^10.0.3",
+      "@nestjs/microservices": "^9.4.0",
       "@nestjs/passport": "^9.0.3",
       "@nestjs/platform-express": "^9.0.0",
       "@nestjs/throttler": "^4.0.0",
       "@nestjs/typeorm": "^9.0.1",
       "@types/multer": "^1.4.7",
+      "amqp-connection-manager": "^4.1.13",
+      "amqplib": "^0.10.3",
       "apollo-datasource": "^3.3.2",
       "aws-sdk": "^2.1370.0",
       "class-validator": "^0.14.0",
