--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "test:cov": "jest --coverage",
       "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
       "test:e2e": "jest --config ./test/jest-e2e.json",
-      "typeorm": "npm run build && npx typeorm -d build/config/dataSource.js",
+      "typeorm": "npm run build && npx typeorm -d dist/config/dataSource.js",
       "migration:generate": "npm run typeorm -- migration:generate",
       "migration:create": "typeorm  migration:create src/shared/migrations/faculdade",
       "migration:run": "npm run typeorm -- migration:run",
@@ -47,6 +47,7 @@
       "dotenv": "^16.0.3",
       "ioredis": "^5.3.2",
       "jsonwebtoken": "^9.0.0",
+      "long": "^5.2.3",
       "nestjs-rate-limiter": "^3.1.0",
       "node-fetch": "^3.3.1",
       "passport": "^0.6.0",
